# aed

./: CMakeLists.txt  README.md  main.cpp
Tests/: funWithComplexity.cpp  tests.cpp
aed2223_p04/Tests/: funSortProblem.cpp  tests.cpp
files/aed2223_p10/Tests/: aed2223_p10  graph.cpp  graph.h
files/studying/: main.cpp
files/studying/Tests/: Bookstore.h  Packer.cpp  Packer.h  Warehouse.cpp  tests.cpp
files/studying/aed2122_ci2_pratica/: CMakeLists.txt  main.cpp
files/studying/aed2122_ci2_pratica/Tests/: aed2122_ci2_pratica  funWithGraphs.cpp  graph.cpp  graph.h  minHeap.h  tests.cpp
files/studying/t123_2021/: CMakeLists.txt
files/studying/t123_2021/Tests/: Book.cpp  Book.h  Bookstore.cpp  Order.cpp  Order.h  Packer.h  Warehouse.cpp
files/studying/t21-22_1/Tests/: Bookstore.cpp  Packer.h  Warehouse.cpp  Warehouse.h  (+1 more)
files/studying/t22-23_1canc/: CMakeLists.txt
files/studying/t22-23_1canc/Tests/: Client.cpp  Client.h  Driver.cpp  Driver.h  Order.cpp  Order.h  Restaurant.cpp  Restaurant.h  UverEats.cpp  UverEats.h  tests.cpp
files/studying/t2_2017/: CMakeLists.txt  Doctor.cpp  Doctor.h  Hospital.cpp
files/studying/t2_2018/: CMakeLists.txt  Kart.cpp  Kart.h  Test.cpp
files/studying/t2_20182/: CSimpleList.h  CStack.h
files/studying/t2_2021delete/: funWithGraphs.h  graph.cpp  graph.h
files/tp01/Tests/: aed2223_p01  funWithCycles.cpp  tests.cpp
files/tp02/Tests/: aed2223_p02  funWithComplexity.cpp  tests.cpp
files/tp03/Tests/: aed2223_p03  funWithSearch.cpp  tests.cpp
files/tp04/Tests/: funSortProblem.cpp  product.cpp  product.h  tests.cpp
files/tp06/Tests/: funStackQueueProblem.cpp
files/tp07/: CMakeLists.txt
files/tp07/Tests/: dictionary.cpp  draftsntsay.cpp  funSetProblem.cpp
(+1 files in other folders)
